[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix-sdk"
version = "0.1.0"
description = "Stable plugin contracts for the Phoenix AI Platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Phoenix AI Platform" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
